@@ -1,5 +1,3 @@
-[PerlCritic]
-select = **/*.{pl,pm,t,psgi}
 ignore = .build/**/*
 ignore = Dist-Zilla-PluginBundle-DROLSKY-*/**/*
 ignore = blib/**/*
@@ -8,27 +6,14 @@ ignore = t/author-*
 ignore = t/release-*
 ignore = t/zzz-*
 ignore = xt/**/*
+
+[PerlCritic]
+select = **/*.{pl,pm,t,psgi}
 argv = --profile=$ROOT/perlcriticrc
 
 [PerlTidy]
 select = **/*.{pl,pm,t,psgi}
-ignore = .build/**/*
-ignore = Dist-Zilla-PluginBundle-DROLSKY-*/**/*
-ignore = blib/**/*
-ignore = t/00-*
-ignore = t/author-*
-ignore = t/release-*
-ignore = t/zzz-*
-ignore = xt/**/*
 argv = --profile=$ROOT/perltidyrc
 
 [Test::Vars]
 select = **/*.pm
-ignore = .build/**/*
-ignore = Dist-Zilla-PluginBundle-DROLSKY-*/**/*
-ignore = blib/**/*
-ignore = t/00-*
-ignore = t/author-*
-ignore = t/release-*
-ignore = t/zzz-*
-ignore = xt/**/*
